5.0.5~beta6 (2015-01-29)
FIX: maybe a fix for a problem (again!) on unix systems while handling HTTPErrors via a handler
FIX: removed pagination for "Related Videos" - the fix before produced some nasty side-effects

5.0.5~beta5 (2015-01-28)
UPD: replace context menu not everywhere

5.0.5~beta4 (2015-01-27)
FIX: VEVO signature

5.0.5~beta3 (2015-01-25)
UPD: dropped dependency of 'requests'-module because of performance issues

5.0.5~beta2 (2015-01-18)
FIX: Add playing video to the 'Watch History'

5.0.5~beta1 (2015-01-16)
FIX: Vevo signature

5.0.4 (2015-01-15)
ADD: 'Live' in search
ADD: 'Play with...' for supporting external/alternative player
ADD: live events (needed some tests and feedback)
ADD: support for user names instead of channel ids
UPD: set XBMC/KODI to at least Gotham 13.2
UPD: Setup-Wizard views based on content type (KODION update)
FIX: Playlist should work again
FIX: Pagination in APIv2
FIX: settings for hiding 'Live' menu
DEL: support for Frodo

5.0.3 (2015-01-08)
ADD: 'Disliked Videos'
ADD: 240p, 360p and 480p
UPD: adjustment in KODION classes (maybe causing problems on MAC OS X 10.10.X + Python 2.6)
UPD: Russian (thx 2 BytEvil)
UPD: Spanish (thx 2 PatOso)
UPD: Polish (thx 2 D.K.)
FIX: German translation
FIX: some Frodo updates

5.0.2 (2015-01-01)
ADD: Support for shared playlists via Yatse
ADD: 'Play from here' for playlists
ADD: 'Queue Video'
FIX: German translation
FIX: Portuguese (Brazil) (thx 2 ASH_Macedo)

5.0.1 (2014-12-31)
ADD: 'Play all' (default, reverse, shuffle)
ADD: Italian (thx 2 peppe_sr)
ADD: Portuguese (Brazil) (thx 2 ASH_Macedo)
ADD: Hungarian (thx 2 gyeben)
ADD: Portuguese (thx 2 enen92)
ADD: Polish (thx 2 D.K.)
ADD: Russian (thx 2 BytEvil)
ADD: Spanish (thx 2 PatOso)
ADD: French (thx 2 roondar)
UPD: support for '1080XF' and 'Xperience1080'
FIX: some live streams should work
FIX: update meta data for video played via ext. url
FIX: remove video from 'Watch Later' playlist
REV: reverted to requests

5.0.0 (2014-12-27)