@@ -1,4 +1,6 @@
 5.0.5~beta6 (2015-01-29)
+ADD: clear search history items
+FIX: maybe a fix for a problem (again!) on unix systems while using python 2.7.9 + certificate verification
 FIX: maybe a fix for a problem (again!) on unix systems while handling HTTPErrors via a handler
 FIX: removed pagination for "Related Videos" - the fix before produced some nasty side-effects
 
